# vpu_core

./: .gitignore  00_ReadMeFirst.txt  01_ReadMe_For_Linux_or_Android.txt  CMakeLists.txt  README.md  build.sh
HEVC_E3/: CMakeLists.txt
HEVC_E3/source/: source.cmake
HEVC_E3/source/lib_vpu_codec/api/: TCC_HEVC_E3.h  TCC_VPU_HEVC_ENC.h
HEVC_E3/source/lib_vpu_codec/tcc_vpu/: hevc_e3.h  wave420l_core.c  wave420l_core.h  wave420l_def.h  wave420l_encoder.c  wave420l_error.h  wave420l_log.h  wave420l_pre_define.h  wave420l_version.h
HEVC_E3/source/lib_vpu_codec/vpuapi/: common.c  common.h  common_regdefine.h  common_vpuconfig.h  product.c  product.h  vpuapi.c  vpuapi.h  vpuapifunc.c  vpuapifunc.h  vpuconfig.h  vpuerror.h  vputypes.h  wave4.c  wave4.h  wave4_regdefine.h
VPU4K_D2/: CMakeLists.txt  vpu_shared_addr.h
VPU4K_D2/source/: CMakeLists.txt  source.cmake
VPU4K_D2/source/lib_vpu_codec/api/: TCC_VPU4K_D2.h  TCCxxxx_VPU_CODEC_COMMON.h
VPU4K_D2/source/lib_vpu_codec/tcc_vpu/: vpu4k_d2.h  vpu4k_d2_log.h  vpu4k_d2_version.h  vpu_common.h  wave5_core.c  wave5_core.h  wave5_decoder.c  wave5_def.h  wave5_pre_define.h  wave5error.h
VPU4K_D2/source/lib_vpu_codec/vpuapi/: product.c  product.h  wave5.c  wave5.h  wave5_regdefine.h  wave5_vpuconfig.h  wave5api.c  wave5api.h  wave5apifunc.c  wave5apifunc.h  wave5config.h  wave5types.h
VPU_C7/: CMakeLists.txt
VPU_C7/source/: source.cmake
VPU_C7/source/lib_vpu_codec/api/: TCC_VPU_C7.h
VPU_C7/source/lib_vpu_codec/tcc_vpu/: vpu_c7.h  vpu_common.c  vpu_core.c  vpu_core.h  vpu_decoder.c  vpu_def.h  vpu_encoder.c  vpu_err.h  vpu_log.h  vpu_pre_define.h  vpu_version.h
VPU_C7/source/lib_vpu_codec/vpuapi/: config.h  jpegtable.h  regdefine.h  vpuapi.c  vpuapi.h  vpuapifunc.c  vpuapifunc.h  vpuconfig.h  vputypes.h
codec_common/: TCCxxxx_VPU_CODEC_COMMON.h  vpu_common.c  vpu_common.h  vpu_shared_addr.h
config/: TCC750x.cmake  TCC805x.cmake  common_config.cmake  common_version.cmake  tcc_chipset_info.txt  tcc_video_ip_info.txt  toolchain.arm.android.config  toolchain.arm.linux.config  toolchain.arm64.android.config  toolchain.arm64.linux.config  toolchain.gcc.linux.config
kernel_include_telechips/: TCC_VPU_4K_D2.h  TCC_VPU_C7_CODEC.h  TCC_VPU_HEVC_ENC.h  TCCxxxx_VPU_CODEC_COMMON.h
